--- a/recipes/openturns/meta.yaml
+++ b/recipes/openturns/meta.yaml
@@ -12,7 +12,7 @@ source:
 
 build:
   number: 200
-  skip: true  # [py3k or win or osx]
+  skip: true  # [py3k or win]
   features:
     - blas_{{ variant }}
   detect_binary_files_with_prefix: True
